# RAG-test

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: roadmap.md  tutorial.md
scripts/: scrape_vghtpe.py  show_tokens.py  test_rag.py  visualize_embeddings.py
src/: __init__.py  cli.py
src/api/: __init__.py  dependencies.py  main.py  models.py  router.py
src/data/: __init__.py  html_scraper.py  models.py  pdf_loader.py  pipeline.py  preprocessor.py  translator.py
src/evaluator/: __init__.py  judge.py  models.py  runner.py  security_judge.py
src/question_generator/: __init__.py  generator.py  models.py
src/rag_engine/: __init__.py  generator.py  indexer.py  pipeline.py  retriever.py
